--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,5 @@ idf_component_register(SRCS "controls.cpp"
                      "events.cpp" "led.cpp"
                      "imu_service.cpp"
                      "RadioLibCustomHAL.hpp"
+                     "encoder_service.cpp"
                     INCLUDE_DIRS "" "include")
