--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "controls.cpp"
+idf_component_register(SRCS "wifi_service.cpp" "controls.cpp"
                      "twai_service.cpp" "main.cpp"
                      "events.cpp" "led.cpp"
                      "imu_service.cpp"
