--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,6 @@
-idf_component_register(SRCS "wifi_service.cpp" "controls.cpp"
+idf_component_register(SRCS "twai_test_main.c" "webserver_service.cpp" "wifi_service.cpp" "controls.cpp"
                      "twai_service.cpp" "main.cpp"
                      "events.cpp" "led.cpp"
                      "imu_service.cpp"
-                     "RadioLibCustomHAL.hpp"
                      "encoder_service.cpp"
-                    INCLUDE_DIRS "" "include")
+                    INCLUDE_DIRS "include")
