Controller Website is UP. Will add functionality later

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,5 @@ idf_component_register(SRCS "twai_test_main.c" "webserver_service.cpp" "wifi_ser
                      "events.cpp" "led.cpp"
                      "imu_service.cpp"
                      "encoder_service.cpp"
+                     "index.cpp"
                     INCLUDE_DIRS "include")
