--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,8 +1,9 @@
-idf_component_register(SRCS "twai_test_main.c" "webserver_service.cpp" "wifi_service.cpp" "controls.cpp"
+idf_component_register(SRCS "wireless_Drive.cpp" "twai_test_main.c" "webserver_service.cpp" "wifi_service.cpp" "controls.cpp"
                      "twai_service.cpp" "main.cpp"
                      "events.cpp" "led.cpp"
                      "imu_service.cpp"
                      "encoder_service.cpp"
-                     "index.cpp"
-                    INCLUDE_DIRS "include")
+                    
+                    INCLUDE_DIRS "include"
+                    )
 spiffs_create_partition_image(storage ../partition FLASH_IN_PROJECT)
